# RS015-process-monitor

./: .gitignore  LICENSE  README.md  meson.build
src/: main.cc  meson.build  resources.xml
src/common/: core.cc  core.h  cpuinfo.cc  cpuinfo.h  diskinfo.cc  diskinfo.h  netinfo.cc  netinfo.h  processinfo.cc  processinfo.h  sysmemoryinfo.h
src/widgets/: graphline.cc  graphline.h  graphview.cc  graphview.glade  graphview.h  processview.cc  processview.glade  processview.h  resourceview.cc  resourceview.glade  resourceview.h
src/windows/: mainwindow.cc  mainwindow.glade  mainwindow.h
